update for Assignment 3
Update for Assignment 3

--- a/RecruitCatBeyrerJL/appsettings.json
+++ b/RecruitCatBeyrerJL/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RecruitCatBeyrerJLContext": "Server=(localdb)\\mssqllocaldb;Database=RecruitCatBeyrerJL.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
