--- a/Week3Exercise1/appsettings.json
+++ b/Week3Exercise1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Week3Exercise1Context": "Server=(localdb)\\mssqllocaldb;Database=Week3Exercise1.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
